Refactor URL handling and add utility methods
Updated URL encoding and decoding methods to use StandardCharsets.UTF_8. Added new utility methods for parsing non-negative long values and encoding illegal URI characters.